# PhenoLink

./: .gitignore  Basic.qmodel  CMakeLists.txt  Installer.nsi.in  Installer_vs2015.nsi.in  License.txt  README.md  Results.json  Tables.txt  auto.sh  comp.sh  compile_commands.json  dev_env1.txt  kill_server.bat  vcpkg.json
.github/ISSUE_TEMPLATE/: 1-bug-report.md
CMake/: UseCheckoutCore.cmake.in
Core/: CMakeLists.txt  Dll.h  ImageContainers.cpp  ImageContainers.h  RegistrableFloatType.h  RegistrableImageType.cpp  RegistrableImageType.h  RegistrableImageType.h~RF316dbd3d.TMP  RegistrableIntegralType.h  RegistrableSecondOrderType.h  RegistrableStdContainerType.h  RegistrableStdContainerTypeSpecial.h  RegistrableTypes.cpp  RegistrableTypes.h  checkoutdataloaderplugininterface.cpp  checkoutdataloaderplugininterface.h  checkouterrorhandler.cpp  checkouterrorhandler.h  checkoutprocess.cpp  checkoutprocess.h  checkoutprocessplugininterface.cpp  checkoutprocessplugininterface.h  ck_mongo.cpp  ck_mongo.h  config.h.in  imageinfos.cpp  imageinfos.cpp.orig  imageinfos.h  matrixdatamodel.cpp  matrixdatamodel.h  networkmessages.cpp  networkmessages.h  networkprocesshandler.cpp  networkprocesshandler.h  phenolinkimage.cpp  phenolinkimage.h  pluginmanager.cpp  pluginmanager.h  screensloader.cpp  screensloader.h  (+6 more)
Core/Cloud/: PhenoLinkDir.cpp  PhenoLinkDir.h
Core/colormap/: color.hpp  map.hpp
Core/zmq/: ARCHITECTURE.md  CRASH_NOTIFICATION_DESIGN.md  CRASH_NOTIFICATION_SKETCH.txt  CRASH_NOTIFICATION_USAGE.md  mdbroker.cpp  mdbroker.hpp  mdcliapi.hpp  mdcliapi_notifying.hpp  mdp.hpp  mdwrkapi.cpp  mdwrkapi.hpp  performances.hpp  zhelpers.hpp  zmsg.cpp  zmsg.hpp
Gui/: AppIcon.rc  CMakeLists.txt  SrvIcon.rc  dashoptions.cpp  dashoptions.h  dashoptions.ui  experimentworkbenchcontrol.cpp  experimentworkbenchcontrol.h  guiserver.cpp  guiserver.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_datatables.cpp  mainwindow_overlay.cpp  mainwindow_startprocesses.cpp  mainwindow_wellplate.cpp  optioneditor.cpp  optioneditor.h  processprogresswidget.cpp  processprogresswidget.h  processprogresswidget.ui  rcs.qrc  screensmodel.cpp  screensmodel.h
Gui/ImageDisplay/: flowlayout.cpp  flowlayout.h  graphicspixmapitem.cpp  graphicspixmapitem.h  graphicssignitem.cpp  graphicssignitem.h  imageform.cpp  imageform.h  imageform.ui  imagegraphicsview.cpp  imagegraphicsview.h  scrollzone.cpp  scrollzone.h
Gui/ScreensDisplay/: graphicsscreensitem.cpp  graphicsscreensitem.h  screensgraphicsview.cpp  screensgraphicsview.h  wellcolorisation.cpp  wellcolorisation.h  wellrepresentationitem.cpp  wellrepresentationitem.h
Gui/Styles/: darkorange.qss
Gui/Tags/: tagger.cpp  tagger.h  tagger.ui  taggerplate.cpp  taggerplate.h  taggerplate.ui
Gui/Widgets/: overlayfilter.cpp  overlayfilter.h  overlayfilter.ui
Gui/ctkWidgets/: ctkBasePopupWidget.cpp  ctkBasePopupWidget.h  ctkCheckBoxPixmaps.h  ctkCheckableComboBox.cpp  ctkCheckableComboBox.h  ctkCheckableComboBoxEventPlayer.h  ctkCheckableComboBoxEventTranslator.h  ctkCheckableHeaderView.cpp  ctkCheckableHeaderView.h  ctkCheckableModelHelper.cpp  ctkCheckableModelHelper.h  ctkCollapsibleGroupBox.h  ctkColorDialog.h  ctkColorPickerButton.cpp  ctkColorPickerButton.h  ctkDoubleRangeSlider.cpp  ctkDoubleRangeSlider.h  ctkDoubleSlider.h  ctkPathLineEdit.cpp  ctkPathLineEdit.h  ctkPathLineEditEventPlayer.h  ctkPathLineEditEventTranslator.h  ctkPathListButtonsWidget.h  ctkPathListWidget.h  ctkPopupWidget.cpp  ctkProxyStyle.h  ctkRangeSlider.cpp  ctkRangeSlider.h  ctkValueProxy.h
Installer/: Install 4609 VLC Plugin.nsi
Main/: CMakeLists.txt  ZMQThread.h  checkouqueuserver.h  checkout_arrow.h  checkout_python.h  checkouthttpserver.h  enc_fast_lossless.cc  main.cpp  mainCli.cpp  mainCli.h  mainCpTranscode.cpp  mainHttpServer.cpp  mainHttpServerTests.cpp  mainQueueServer.cpp  mainServer.cpp  mainUploader.cpp  mainUploader.h  mainZMQ_QueueServer.cpp  mainZMQ_WorkerServer.cpp  mainzCli.cpp  mainzCli.h  mdbroker.hpp  mdcliapi.hpp  mdp.hpp  mdwrkapi.cpp  mdwrkapi.hpp  mutex_queue.h  zhelpers.hpp  zmsg.hpp
Plugins/: CMakeLists.txt
Plugins/Loaders/: CMakeLists.txt  incellloader.cpp  incellloader.h  yokogawaloader.cpp  yokogawaloader.h
Python/: CMakeLists.txt  CoreDemoScript.py  checkoutcorepythoninterface.cpp  checkoutcorepythoninterface.h  checkoutpythonpluginshandler.cpp  checkoutpythonpluginshandler.h
Python/Sample Scripts/: Bobi.json  CoreDemoScript.py  bob.json  checkout_init.py  qsdfsq.py  test.py
RawProcessor/: CMakeLists.txt  main.cpp  rawprocmainwin.cpp  rawprocmainwin.h  rawprocmainwin.ui
Server/: CMakeLists.txt  networkmessages.cpp  networkmessages.h  processserver.cpp  processserver.h  processserver.h.zt4564  processthread.cpp  processthread.h
Tags/: CMakeLists.txt
Testing/: CMakeLists.txt
Tools/: CheckCSV.py  GeneratePlugin.py  SanityCheck.py
Tools/Templates/: cpp_template.tpl  h_template.tpl
qhttp/: CMakeLists.txt  Readme.txt  qhttpabstracts.cpp  qhttpclient.cpp  qhttpclient.hpp  qhttpserverconnection.cpp
qhttp/private/: httpreader.hxx  httpwriter.hxx  qhttpclient_private.hpp  qsocket.hpp
triplets/: x64-windows-static.cmake  x64-windows.cmake
